kubernetes/apps/infrastructure/privileged/cilium/netbird-routing-peer.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbird
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netbird
  template:
    metadata:
      labels:
        app: netbird
    spec:
      containers:
        - name: netbird
          image: netbirdio/netbird:latest
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - SYS_RESOURCE
                - SYS_ADMIN
